# core-sceptic.py

./: README.md
sceptic.py-main/: README.md  pyproject.toml  run_mcp.sh  test_mcp.py
sceptic.py-main/examples/: README.md  erc20_balance.py  mcp_stdio_server.py  server.py  testnet2_server.py
sceptic.py-main/examples/flows/: testnet2_erc20_approve.py  testnet2_erc20_transfer.py
sceptic.py-main/sceptic/: __init__.py  __main__.py  accounts.py  address_book.py  cli.py  config.py  core_system.py  defi.py  erc20.py  gas.py  logging.py  mcp_server.py  mcp_simple.py  mcp_stdio.py  multicall.py  network.py  nft.py  nonce.py  permit.py  polling.py  prices.py  providers.py  rawrpc.py  server.py  tx.py  utils.py  validation.py  wallet.py  wallet_protocol.py  wallet_remote.py
sceptic.py-main/sceptic/abis/: erc1155.json  erc20.json  erc721.json
sceptic.py-main/tests/: test_config.py  test_erc20_offline.py  test_prices.py
